# ld53-delivery

./: .gitignore  README.md  broad_phase_test.py  cleanup_spritesheets.py  count_lines.py  create_element_theme.py  dev_map_gen.py  dev_mat_tree.py  main.py  pyproject.toml  test_alchemy.py  test_ecenomy_system.py  test_faction_system.py  test_map_gen.py  test_physics.py
assets/: jomoho_spaceship_spriteatlas_pixelart_SNES_25fcee5.psd  theme.json
assets/sheets/: sheet01.json  sheet01.psd  sheet02.json  sheet03.json  sheet03_desat.psd  sheet03_desat_elements.psd  sheet_clumps.json  sheet_elements.json  sheet_glyphs.json  sheet_nice.json  sheet_nice_large.json
assets/sheets copy/: sheet_clumps.json  sheet_nice.json
assets/songs/: convert2ogg.sh  credits.txt  song_20230428_234522_703.mid  song_20230428_235755_299.mid
assets/starfield/: starfield_starsonlyl.psd
game/: __init__.py  alchemy.py  audio_manager.py  colors.py  economy_system.py  faction_system.py  game_objects.py  image_manager.py  loop.py  map_gen.py  physics.py  quests.py  windows.py
my_pygame_gui/: __init__.py  ui_manager.py
my_pygame_gui/core/: __init__.py  colour_gradient.py  colour_parser.py  gui_font_freetype.py  resource_loaders.py  surface_cache.py  ui_appearance_theme.py  ui_container.py  ui_element.py  ui_font_dictionary.py  ui_window_stack.py  utility.py
my_pygame_gui/elements/: __init__.py  ui_button.py  ui_drop_down_menu.py  ui_horizontal_scroll_bar.py  ui_horizontal_slider.py  ui_image.py  ui_label.py  ui_panel.py  ui_progress_bar.py  ui_screen_space_health_bar.py  ui_selection_list.py  (+9 more)
(+36 files in other folders)
