[tool.poetry]
name = "pygameforbeginners"
version = "0.1.0"
description = ""
authors = ["Moritz <moritz.laass@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.3.0"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pygame-gui = "^0.6.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
